--- a/src/index.html
+++ b/src/index.html
@@ -168,45 +168,23 @@
         <div class="swiper__wraper">
             <div class="swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="review">
-                            <svg width="100%" height="9" viewBox="0 0 101 9">
-                                <path
-                                    d="M.426 1.973C4.144 1.567 17.77-.514 21.443 1.48 24.296 3.026 24.844 4.627 27.5 7c3.075 2.748 6.642-4.141 10.066-4.688 7.517-1.2 13.237 5.425 17.59 2.745C58.5 3 60.464-1.786 66 2c1.996 1.365 3.174 3.737 5.286 4.41 5.423 1.727 25.34-7.981 29.14-1.294"
-                                    pathLength="1" fill="none" stroke="#000" />
-                            </svg>
-                            <div class="review__card">
-                                <div class="review__topborder">
-                                </div>
-                                <div class="review__text">
-                                    <span>F</span>
-                                    ully commited and ready to share all he knows with you, when ever you seek for
-                                    his
-                                    hellp. Michael explain for me web devlopment is very easy way possible from html
-                                    to
-                                    react and through his help my carrier in web development is like a breezy. For
-                                    me
-                                    it's like he know almost everything because whenever I ask him, there's always
-                                    postive feedback for my question. He learn everyday and make sure he stregthen
-                                    his
-                                    weakness. If you want to learn coding whether from scratch or intermediate I
-                                    prefer
-                                    him.
-                                </div>
-                                <img src="./Assets/images/profile/1.png" alt="Luka garange" class="review__img">
-                                <div class="review__profile">
-                                    <span>Luka Garang</span>
-                                    <span>Founder Hagana-Wen</span>
-                                </div>
+                </div>
+            </div>
+            <div class="swiper__tools">
+                <div class="swiper__buttons">
+                    <div class="button swiper-button-prev">
 
-                            </div>
-
-                        </div>
+                        <i class="uil uil-arrow-left"></i>
                     </div>
+                    <div class=" button swiper-button-next">
 
+                        <i class="uil uil-arrow-right"></i>
+
+                    </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
+
         </div>
 
 
