--- a/src/index.html
+++ b/src/index.html
@@ -184,16 +184,25 @@
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
+        </div>
+    </div>
+    <!--Projects-->
+    <section class="section">
+        <h1 class="projects__header">
+            Some of my projects
+        </h1>
+
+        <div class="project">
 
         </div>
+    </section>
 
 
 
 
-
-        <script src="./Assets/js/app.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="./Assets/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </body>
 
 </html>
