--- a/src/index.html
+++ b/src/index.html
@@ -193,13 +193,62 @@
         </h1>
 
         <div class="project">
-
         </div>
     </section>
+    <!--FAQ-->
+    <div class="faq">
+        <div class="faq__wrap">
+            <div class="section__header-title">
+                FAQ
+            </div>
+            <div class="section__header-subtitle">Have some Questions? I got you covered.</div>
+            <div class="question__container"></div>
+        </div>
+    </div>
 
 
+    <!--Contact-->
+    <section class="section contact">
+        <div class="contact__wrapper">
+            <div class="contact__header">
+                <div class="section__header-title">Contact</div>
+                <div class="section__header-subtitle">Get in touch</div>
+            </div>
+            <div class="contact__form">
+                <form action="#" class="form">
+                    <div class="form__flex">
+                        <div class="form__info">
+                            <label for="name">Hi, My name is </label>
+                            <input name="name" type="text" placeholder="Type here...">
+                        </div>
+                        <div class="form__info">
+                            <label for="service">I'm looking for </label>
+                            <input name="service" type="text" placeholder="Type of service">
+                        </div>
+                    </div>
+                    <div class="form__flex">
+                        <div class="form__info">
+                            <label for="email">Get in touch with me at</label>
+                            <input name="email" type="text" placeholder="Email here">
+                        </div>
 
+                    </div>
+                    <div class="form__flex">
+                        <textarea type="text" placeholder="Your Message"></textarea>
+                    </div>
+                    <div class="form__flex">
+                        <div class="form__info">
+                            <button class="contactButton">
+                                <span>Send <i class="uil uil-message"></i> </span>
+                            </button>
 
+                        </div>
+
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
     <script src="./Assets/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
