--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,8 @@
     </div>
     <!--Landing page-->
     <div class="landing">
+        <!---Three js background-->
+        <div class="three-bg"></div>
         <div class="bg"></div>
         <div class="intro">
             <h1>I'm <span class="auto-type-name"></span> </h1>
